# mutCaller

./: Cargo.toml  EXAMPLES.md  README.md  mutcaller  mutcaller.sh
mutcaller_rust/: Cargo.toml
mutcaller_rust/src/: addtag.rs  count.rs  fastq.rs  fastq1.rs  fastq2.rs  fastq3.rs  fastq_arch.rs  fastq_arch4.rs  main.rs  params.yml  params_count.yml  params_fastq.yml  params_fastq1.yml
mutcaller_rust/src/archive/: fastq1.rs
scripts/: QCplots_preFiltering.r  addTag.py  addTags.py  cb_sniffer.py  cb_sniffer.rs  quantReads.R
src/: cli.yml  count.rs  countbam.rs  fastq.rs  main.rs  mutcaller.rs  params_count.yml  params_countbam.yml  params_fastq.yml  params_fastq1.yml  params_mutcaller.yml  tests.rs  vcf.rs
src/archive/: addtag.rs  count.rs  fastq.rs  params_addtag.yml  params_count.yml  params_countbam.yml  params_mutcaller.yml
src/countbam/: mod.rs
src/mutcaller/: mod.rs
tests/: breaksit.tsv  breaksit2.bam  breaksit2.bam.bai  broken_read.txt  lr.bam.bai  variants.csv  variants.tsv  variants_cbsniffer.tsv
tests/mm2/: Aligned.out.sorted.bam.bai
