[package]
name = "mutcaller_rust"
version = "0.4.0"
edition = "2021"
description = "Single nucleotide variant counting pipeline for single cell genomics data"
repository = "https://github.com/furlan-lab/mutCaller"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/furlan-lab/mutCaller"
exclude = [".gitignore"]

[dependencies]
# bam = "0.1.4"
bam = { git = "https://gitlab.com/scfurl/bam.git", version = "0.1.5" }
clap = { version = "2.33.0", features = ["yaml"] }
fastq = "0.6.0"
flate2 = "1.0.24"
bytes = "1.1.0"
simple-log = "1.5.1"
toml = "0.5.7"
serde_derive = "1.0.140"
serde = "1.0.147"
csv = "1.1.6"
itertools = "0.10.0"
rayon = "1.7.0"
log = "0.4"
vcf = "0.6.1"
simplelog = { version = "^0.11.0", features = ["paris"] }


[[bin]]
name = "mutcaller"
path = "src/main.rs"


