[package]
name = "mutcaller_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
clap = { version = "2.33.0", features = ["yaml"] }
fastq = "0.6.0"
parasailors = "0.3.1"

[[bin]]
name = "mutcaller_rust"
path = "src/main.rs"

[[bin]]
name = "fastq"
path = "src/fastq.rs"